Version 2.2.000
    New Skill - Tridents
    New Skill - Crossbows

    New config file named 'tridents.yml'

    New command /tridents - Skill Info for Tridents
    New command /crossbows - Skill Info for Crossbows

    Added Sub-Skill named Multi Tasking to Tridents
    Added Sub-Skill named Tridents Limit Break to Tridents

    Added Sub-Skill named Super Shotgun to Crossbows
    Added Sub-Skill named Crossbows Limit Break to Crossbows

    Permission node descriptions had mentions of ability changed to sub-skill and other minor corrections
    mcMMO will now register arrows shot from the offhand as being from either Archery or Crossbows (before mcMMO ignored offhand Archery)

    (These permissions are all included in the mcmmo.defaults node)
    New permission node 'mcmmo.commands.tridents'
    New permission node 'mcmmo.skills.tridents'
    New permission node 'mcmmo.ability.tridents.all'
    New permission node 'mcmmo.ability.tridents.multitasking'
    New permission node 'mcmmo.ability.tridents.tridentslimitbreak'

    New permission node 'mcmmo.commands.crossbows'
    New permission node 'mcmmo.skills.crossbows'
    New permission node 'mcmmo.ability.crossbows.all'
    New permission node 'mcmmo.ability.crossbows.crossbowslimitbreak'
    New permission node 'mcmmo.ability.crossbows.coneofdeath'

    The Party system has some new features, and a lot of bad features were removed completely, read the notes
    Parties can no longer have passwords (see notes)
    Parties can no longer be locked (see notes)
    Parties no longer have item share (see notes)
    Party alliances are gone (see notes)
    Parties are always private (see notes)
    Party members can be promoted to Officer by the Party Leader (officers are mini-party leaders)
    Added Party Officer chat, only other officers (including the party leader) can read and participate
    Added the following party subcommands: promote, demote