@@ -1,7 +1,0 @@
-package com.gmail.nossr50.api.exceptions;
-
-public class ProfileRetrievalException extends RuntimeException {
-    public ProfileRetrievalException(String message) {
-        super(message);
-    }
-}
