@@ -1,4 +1,0 @@
-package com.gmail.nossr50.api.exceptions;
-
-public class UnexpectedValueException extends RuntimeException {
-}
