@@ -1,6 +1,6 @@
 package com.gmail.nossr50.datatypes.experience;
 
-import com.gmail.nossr50.datatypes.experience.context.NullExperienceContext;
+import com.neetgames.mcmmo.experience.context.NullExperienceContext;
 import org.jetbrains.annotations.NotNull;
 
 public class ExperienceContextBuilder {
