@@ -1,14 +1,14 @@
 package com.gmail.nossr50.datatypes.experience.context;
 
-import org.bukkit.block.Block;
+import com.neetgames.jmal.Block;
+import com.neetgames.mcmmo.experience.context.BlockExperienceContext;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
-public class BlockExperienceContext implements ExperienceContext {
-
+public class BlockExperienceContextImpl implements BlockExperienceContext {
     @NotNull Block blockExperienceContext;
 
-    public BlockExperienceContext(@NotNull Block block) {
+    public BlockExperienceContextImpl(@NotNull Block block) {
         this.blockExperienceContext = block;
     }
 
@@ -18,11 +18,6 @@ public class BlockExperienceContext implements ExperienceContext {
         return blockExperienceContext;
     }
 
-    /**
-     * Get the Block involved in this experience context
-     *
-     * @return the {@link Block} involved in this experience context
-     */
     public @NotNull Block getBlockExperienceContext() {
         return blockExperienceContext;
     }
