@@ -4,10 +4,11 @@ import com.gmail.nossr50.datatypes.dirtydata.DirtyData;
 import com.gmail.nossr50.datatypes.dirtydata.DirtySet;
 import com.gmail.nossr50.datatypes.mutableprimitives.MutableBoolean;
 import com.gmail.nossr50.datatypes.mutableprimitives.MutableString;
-import com.google.common.base.Objects;
 import org.jetbrains.annotations.NotNull;
+import org.jetbrains.annotations.Nullable;
 
 import java.util.HashSet;
+import java.util.Objects;
 import java.util.Set;
 
 public class PersistentPartyData {
@@ -15,6 +16,7 @@ public class PersistentPartyData {
     private final @NotNull MutableBoolean dirtyFlag; //Dirty values in this class will change this flag as needed
     private final @NotNull DirtyData<MutableString> partyName;
     private final @NotNull DirtySet<PartyMember> partyMembers; //TODO: Add cache for subsets
+    private @Nullable PartyMember partyLeaderRef;
 
     public PersistentPartyData(@NotNull String partyName,
                                @NotNull Set<PartyMember> partyMembers) {
@@ -23,11 +25,28 @@ public class PersistentPartyData {
         this.partyMembers = new DirtySet<>(new HashSet<>(partyMembers), dirtyFlag);
     }
 
-    public String getPartyName() {
+    private void initPartyLeaderRef() {
+        for(PartyMember partyMember : getPartyMembers()) {
+            if(partyMember.getPartyMemberRank() == PartyMemberRank.LEADER) {
+                partyLeaderRef = partyMember;
+                break;
+            }
+        }
+
+        if(partyLeaderRef == null)
+            throw new RuntimeException("Party leader is null!");
+    }
+
+    public @Nullable PartyMember getPartyLeader() {
+        return partyLeaderRef;
+    }
+
+
+    public @NotNull String getPartyName() {
         return partyName.getData().getImmutableCopy();
     }
 
-    public Set<PartyMember> getPartyMembers() {
+    public @NotNull Set<PartyMember> getPartyMembers() {
         return partyMembers;
     }
 
@@ -40,12 +59,11 @@ public class PersistentPartyData {
         if (this == o) return true;
         if (o == null || getClass() != o.getClass()) return false;
         PersistentPartyData that = (PersistentPartyData) o;
-        return Objects.equal(getPartyName(), that.getPartyName()) &&
-                Objects.equal(getPartyMembers(), that.getPartyMembers());
+        return partyName.equals(that.partyName) && partyMembers.equals(that.partyMembers) && Objects.equals(partyLeaderRef, that.partyLeaderRef);
     }
 
     @Override
     public int hashCode() {
-        return Objects.hashCode(getPartyName(), getPartyMembers());
+        return Objects.hash(partyName, partyMembers, partyLeaderRef);
     }
 }
